Customers move under contacs and components updates for titles, added packages

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-select": "^5.8.0",
     "swr": "^2.2.5",
     "tailwind-datepicker-react": "^1.4.3"
   },
