--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@floating-ui/react": "^0.26.19",
     "@heroicons/react": "^2.1.4",
+    "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.7.2",
     "next": "14.2.4",
     "react": "^18",
