--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/forms": "^0.5.7",
     "axios": "^1.7.2",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-select": "^5.8.0",
